--- a/nmt_webapp/index.html
+++ b/nmt_webapp/index.html
@@ -107,10 +107,10 @@
           <div style="display: inline-block; margin: 5px 10px;">
             <label for="tgt_langs" style="font-size: larger;">Ngôn ngữ đích:</label>
             <select name="tgt_langs" id="tgt_langs" value="en" style="font-size: larger;">
-              <option value="en" selected="selected">Tiếng Anh</option>
-              <!-- <option value="vi">Tiếng Việt</option> -->
+              <option value="en">Tiếng Anh</option>
+              <option value="vi" selected="selected">Tiếng Việt</option>
             </select>
-            <input type="hidden" id="cur_tgt_lang" name="cur_tgt_lang" value="en">
+            <input type="hidden" id="cur_tgt_lang" name="cur_tgt_lang" value="vi">
           </div>
           <div style="display: inline-block; margin: 5px 10px;">
             <button id="translate_button" style="padding: 3px 20px; margin-bottom: 5px; font-size: larger;">Dịch văn
