--- a/nmt_webapp/index.html
+++ b/nmt_webapp/index.html
@@ -18,6 +18,68 @@
       background-color: rgb(0, 110, 255);
       color: white;
     }
+    .switch {
+      position: relative;
+      display:flex;
+      align-items:center;
+      padding: 4px;
+      width: 60px;
+      height: 28px;
+    }
+
+    .switch input { 
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 10px;
+      background-color: #ccc;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 22px;
+      width: 22px;
+      top: 2px;
+      left: 4px;
+      bottom: 0px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+
+    input:checked + .slider {
+      background-color: #2196F3;
+    }
+
+    input:focus + .slider {
+      box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+      -webkit-transform: translateX(35px);
+      -ms-transform: translateX(35px);
+      transform: translateX(35px);
+    }
+
+    /* Rounded sliders */
+    .slider.round {
+      border-radius: 30px;
+    }
+
+    .slider.round:before {
+      border-radius: 50%;
+    }
   </style>
   <script>
     function auto_grow(src_textarea, tgt_textarea) {
@@ -87,6 +149,7 @@
     });
   </script>
 </head>
+
 <body style="overflow-x: hidden; height: 98vh;">
   <div style="display: flex; flex-direction: column; height: 100%; width: 80%;">
     <div style="flex: 90%; margin-top: 50px;">
@@ -98,11 +161,12 @@
           <div style="display: inline-block; margin: 5px 10px;">
             <label for="src_langs" style="font-size: larger;">Ngôn ngữ nguồn:</label>
             <select name="src_langs" id="src_langs" value="zh" style="font-size: larger;">
-              <!-- <option value="km">Tiếng Khmer</option> -->
-              <option value="zh" selected="selected">Tiếng Trung</option>
+              <!-- <option value="zh" selected="selected">Tiếng Trung</option> -->
+              <option value="km" selected="selected">Tiếng Khmer</option>
+              <option value="km">Tiếng Lào</option>
               <!-- <option value="ru">Tiếng Nga</option> -->
             </select>
-            <input type="hidden" id="cur_src_lang" name="cur_src_lang" value="zh">
+            <input type="hidden" id="cur_src_lang" name="cur_src_lang" value="km">
           </div>
           <div style="display: inline-block; margin: 5px 10px;">
             <label for="tgt_langs" style="font-size: larger;">Ngôn ngữ đích:</label>
@@ -111,8 +175,15 @@
               <option value="vi" selected="selected">Tiếng Việt</option>
             </select>
             <input type="hidden" id="cur_tgt_lang" name="cur_tgt_lang" value="vi">
-          </div>
-          <div style="display: inline-block; margin: 5px 10px;">
+          </div>   
+          <div style="display: inline-block; margin: 0px 50px 0px 20px;">
+            <label for="opt_segmented" style="font-size: larger;">Dịch tách đoạn:</label>
+            <label class="switch">
+              <input type="checkbox" checked>
+              <span class="slider round"></span>
+            </label>
+          </div>         
+          <div style="display: inline-block; margin: 0px 10px 10px 10px;">
             <button id="translate_button" style="padding: 3px 20px; margin-bottom: 5px; font-size: larger;">Dịch văn
               bản</button>
           </div>
@@ -138,4 +209,5 @@
     </div>
   </div>
 </body>
+
 </html>
