fix CString to str

--- a/nmt_webapp/index.html
+++ b/nmt_webapp/index.html
@@ -62,7 +62,7 @@
         // show progress bar
         $("#progress_bar").show();
         $.ajax({
-          url: "http://192.168.1.119:5000/translate",
+          url: "http://10.16.208.99:5006/translate",
           type: "GET",
           data: {
             text: $("#src_text").val(),
@@ -133,7 +133,7 @@
       <p>
         Liên hệ chính: TS. Nguyễn Thế Hùng, SĐT: 0976.788.617; ThS. Đỗ Văn Khánh, SĐT: 0383.047.626.
       <p>
-      <p>&copy; 2023 Nhóm nghiên cứu NLP, Phòng Hệ thống Tự động hóa Chỉ huy-Điều khiển/Viện 10.</p>
+      <p>&copy; 2023 Nhóm nghiên cứu NLP, Phòng Phát triển Phần mềm/Viện nghiên cứu 486.</p>
       </p>
     </div>
   </div>
